<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.francelabs.datafari</groupId>
  <artifactId>datafari-ce</artifactId>
  <!-- Main POM of datafari -->
  <packaging>pom</packaging>
  <version>7.0-dev-Community</version>
  <name>Datafari Enterprise Search CE - Parent POM</name>
  <properties>
    <adminui.version>1.0</adminui.version>
    <adminui.md5>ae9ca787e5067f3bedb1f2cdad4408b0</adminui.md5>
    <assistant.version>1.0</assistant.version>
    <assistant.md5>ec8c4019e7077e7b83d02e75fc39115a</assistant.md5>
    <bcpkix-jdk15on.version>1.70</bcpkix-jdk15on.version>
    <bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>
    <datafari.version>7.0-dev-Community</datafari.version>
    <datafariui.version>2.0.1</datafariui.version>
    <datafariui.md5>15f4832b3e4fd438f355f4dc23ac5139</datafariui.md5>
    <guava.version>26.0-jre</guava.version>
    <httpclient.version>4.5.13</httpclient.version>
    <java.version>21</java.version>
    <jena-libs.version>4.4.0</jena-libs.version>
    <json.simple.version>1.1.1</json.simple.version>
    <keycloak.version>22.0.1</keycloak.version>
    <log4j.version>2.17.2</log4j.version>
    <logstash.version>8.19.4</logstash.version>
    <logstash.sha512>2e1b77745e80a0e5101d7bcbee5bbfbe43373628a8c5e3ddbe1a55d91491b05186a084334b27dcfd52b37d74236d71e99d41b95600c44c51e54a4910284783e5</logstash.sha512>
    <mcf-solr-plugin.version>1.2</mcf-solr-plugin.version>
    <mcf-solr-plugin.sha512>43cbc7c899fc0c753d05328555864c77f2aa843337e1c5606f07b28955ae199e2600f1b28e433fb463df928a922e998713f4c3dfdc37cc590306a4848be92409</mcf-solr-plugin.sha512>
    <mssql-jdbc.version>10.2.1.jre11</mssql-jdbc.version>
    <postgresql.version>42.7.2</postgresql.version>
    <ojdbc.version>19.15.0.0.1</ojdbc.version>
    <postgres.version>42.7.2</postgres.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   <solr.sha512>825ab4e92a839802d9f5d570600b622881ddfe4f700cab569afb7d8220590a59d11088f4e10d4dcf9395073c35d73a420cc275a9ed7b18e2f84178bfcb49ae82</solr.sha512>
   <solr.version>10.0.0</solr.version>
   <lucene.version>10.0.0-SNAPSHOT</lucene.version>
    <spring.data.cassandra.version>3.4.15</spring.data.cassandra.version>
    <spring.security.kerberos.version>2.2.0</spring.security.kerberos.version>
    <tika.version>3.2.3</tika.version>
    <tika-server.sha512>3099b58451a74e940f8a4f76933e0de86bd4dba70efd1b645df1926988b31dac7f1196efda43281aa8d88b1e29ef73adf11f069b7a27d6baf753a83bf95f5f86</tika-server.sha512>
    <tika-server-commit-number>5c0793e2c</tika-server-commit-number>
    <tomcat.version>10.1.48</tomcat.version>
    <tomcat-mcf.version>9.0.81</tomcat-mcf.version>
    <slf4j.mcf.version>1.7.36</slf4j.mcf.version>
    <xmlsec.version>2.3.0</xmlsec.version>
    <mcf.version>2.28</mcf.version>
    <mcf.sha512>73b8053e333d63540113cc247e1ac7679b91eb07d68f4cb89ae8ffdfa6978fb24bd346bcb0cbc45ae823c8accd7bedd0994b3e7683442a614b839a7ab3616def</mcf.sha512>
    <zookeeper.version>3.9.4</zookeeper.version>
    <zookeeper.sha512>36bffae6440ed0d71ed83a621b8c52c583860b414812197373237f0c148bd16e6b599977c90e5eb81c0fce6b82ef44aa782621535417cffc4c2a0a51a56f2cdf</zookeeper.sha512>
    <langchain4j.version>1.12.2</langchain4j.version>
    <jetty.version>12.0.27</jetty.version>
  </properties>
  
  <!-- The order of modules execution is important  -->
  <modules>
    <!-- Child module datafari-core added to install project dependencies in Maven 
      repo -->

    <module>datafari-solr</module>
<module>datafari-updateprocessor</module>
    <module>datafari-mcf</module>
    <module>datafari-mcf-connectors-dependencies</module>
    <module>datafari-core</module>
    <module>datafari-webapp</module>
    <module>datafari-zookeeper</module>
    <module>datafari-jena</module>
    <module>datafari-tomcat</module>
    <module>datafari-tomcat-mcf</module>
    <module>datafari-analytic-stack</module>
    <module>datafari-docfilter-connector</module>
    <module>datafari-emptier-connector</module>
    <module>datafari-metadatacleaner-connector</module>
    <module>datafari-spacy-fastapi-connector</module>
    <module>datafari-tika-server</module>
    <module>datafari-mcf-scripts</module>
    <module>datafari-web-connector</module>
    <module>datafari-share-connector</module>
    <module>datafari-ui</module>
    <module>datafari-adminui</module>
    <module>datafari-assistant</module>
    <module>datafari-git-plugin</module>
    <module>datafari-regex-entity-connector</module>
    <module>datafari-llm-connector</module>
    <module>datafari-binary-connector</module>
    <module>datafari-vector-search-connector</module>
    <module>datafari-active-directory-connector</module>
    <module>datafari-solr-atomic-update</module>
    <module>datafari-confluence-v6-connector</module>
    <module>datafari-solr-connector</module>
    <module>datafari-jdbc-connector</module>
    <module>datafari-jira-connector</module>
  </modules>


  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.francelabs.datafari</groupId>
        <artifactId>datafari-core</artifactId>
        <version>7.0-dev-Community</version>
      </dependency>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>3.5.13</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-bom</artifactId>
      <version>${jetty.version}</version>
      <type>pom</type>
      <scope>import</scope>
    </dependency>

      <!-- Logger -->
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-bom</artifactId>
        <version>2.23.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>2.0.16</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j2-impl</artifactId>
        <version>2.23.1</version>
        <scope>runtime</scope>
      </dependency>

      <dependency>
        <groupId>org.apache.solr</groupId>
        <artifactId>solr-solrj</artifactId>
        <version>${solr.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.apache.solr</groupId>
        <artifactId>solr-core</artifactId>
        <version>${solr.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.apache.solr</groupId>
        <artifactId>solr-solrj-zookeeper</artifactId>
        <version>${solr.version}</version>
      </dependency>


      <!-- Jena -->
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-arq</artifactId>
        <version>4.4.0</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- JXLS -->
      <dependency>
        <groupId>org.jxls</groupId>
        <artifactId>jxls-poi</artifactId>
        <version>2.13.0</version>
        <exclusions>
          <exclusion>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- Tika -->
      <dependency>
        <groupId>org.apache.tika</groupId>
        <artifactId>tika-core</artifactId>
        <version>${tika.version}</version>
        <exclusions>
          <exclusion>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.apache.tika</groupId>
        <artifactId>tika-parsers-standard-package</artifactId>
        <version>${tika.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.0.0-M2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <release>21</release>
            <parameters>true</parameters>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.6.1</version>
        </plugin>
        <plugin>
          <groupId>com.googlecode.maven-download-plugin</groupId>
          <artifactId>download-maven-plugin</artifactId>
          <version>1.4.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M3</version>
          <configuration>
            <argLine> --illegal-access=permit 
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>pl.project13.maven</groupId>
          <artifactId>git-commit-id-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.0.5</version>
                </requireMavenVersion>
                <bannedDependencies>
                  <excludes>
                    <!-- FIXME to be removed when no MCF anymore -->
                    <!-- <exclude>org.slf4j:slf4j-simple</exclude> -->
                    <exclude>org.apache.logging.log4j:log4j-slf4j-impl</exclude>
                    <exclude>org.slf4j:slf4j-log4j12</exclude>
                    <exclude>org.apache.logging.log4j:log4j-to-slf4j</exclude>
                    <exclude>org.slf4j:jcl-over-slf4j</exclude>
                  </excludes>
                </bannedDependencies>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <description>
Datafari is the ideal product for those who want to search through their data, while using advanced open source technologies. Datafari combines Apache ManifoldCF and Apache Solr, to allow its users to search through many different and diverse data sources: their file shares, their cloud shares (dropbox, google drive???), their databases, but also their emails and many more.
    </description>
  <url>http://www.datafari.com/en/</url>
  <inceptionYear>2011</inceptionYear>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <organization>
    <name>France Labs - Search Experts</name>
    <url>http://www.francelabs.com/en/</url>
  </organization>
  <issueManagement>
    <system>JIRA</system>
    <url>https://datafari.atlassian.net/secure/Dashboard.jspa</url>
  </issueManagement>
  <scm>
    <connection>scm:git:https://github.com/francelabs/datafari.git</connection>
    <tag>HEAD</tag>
    <url>https://github.com/francelabs/datafari</url>
  </scm>
</project>
